# summer-camp

2017-summer-camp/: README.md
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/: CMakeLists.txt  MANIFEST.md
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/cmake/Modules/: BLE_toolsConfig.cmake
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/docs/: README.BLE_tools
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/docs/doxygen/: Doxyfile.in
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/docs/doxygen/other/: group_defs.dox  main_page.dox
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/examples/: 123.py  test_z.py
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/examples/grc/: BB_recive.grc  gr_ble.grc  gr_ble.py  recive.grc  send.grc  top_block.py
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/grc/: BLE_tools_BLE_CRC24.xml  BLE_tools_BLE_debugsink.xml  BLE_tools_BLE_pack_collect.xml  BLE_tools_find_pack_by_preamble.xml  BLE_tools_find_pack_in_data_channel.xml  BLE_tools_pack_bin_to_byte.xml  CMakeLists.txt
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/include/BLE_tools/: CMakeLists.txt  api.h  find_pack_by_preamble.h
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/lib/: CMakeLists.txt  find_pack_by_preamble_impl.cc  find_pack_by_preamble_impl.h  qa_BLE_tools.cc  qa_BLE_tools.h  test_BLE_tools.cc
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/python/: BLE_CRC24.py  BLE_debugsink.py  BLE_pack_collect.py  CMakeLists.txt  __init__.py  find_pack_in_data_channel.py  pack_bin_to_byte.py  qa_find_pack_by_preamble.py  whiting_array.py
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/some-tools/: BLE_whiting.py
2017-summer-camp/LiHaisu-Bluetooth/code/gr-BLE-tools/swig/: BLE_tools_swig.i  CMakeLists.txt
2017-summer-camp/LiuShinan-drone-detection/code/: CNN_INPUT.py  CNN_RESULT.py  CNN_TRAIN.py  DroneDB.grc  DroneDB.py  DroneDB_BACK.grc  DroneDB_BACK.py  DroneDB_DOWN.grc  DroneDB_DOWN.py  DroneDB_FRONT.grc  DroneDB_FRONT.py  DroneDB_LEFT.grc  DroneDB_LEFT.py  DroneDB_RIGHT.grc  DroneDB_RIGHT.py  DroneDB_UP.grc  DroneDB_UP.py  utils.py
2017-summer-camp/ZhuMengyao-cellphone-sensors/code/MotionEvent/: .project  AndroidManifest.xml
2017-summer-camp/ZhuMengyao-cellphone-sensors/code/MotionEvent/res/layout/: activity_main.xml  activity_motion_event.xml  mainactivity1.xml
2017-summer-camp/ZhuMengyao-cellphone-sensors/code/MotionEvent/res/values/: strings.xml
2017-summer-camp/ZhuMengyao-cellphone-sensors/code/Socket_Client/: .project
2017-summer-camp/ZhuMengyao-cellphone-sensors/code/Socket_Client/res/layout/: main.xml
2017-summer-camp/ZhuMengyao-cellphone-sensors/code/Socket_Client/res/values/: strings.xml
2017-summer-camp/ZhuMengyao-cellphone-sensors/code/web/: device.html  log.php
(+7 files in other folders)
